now works correctly on mobile

--- a/s.css
+++ b/s.css
@@ -1,7 +1,7 @@
 body {
   position: absolute;
   display: block;
-  background: #F7F2EB url('bg.jpg') center center;
+  background: #F7F2EB url('bgOptimized.jpg') center center;
   background-size: cover;
   width: 100%;
   height: 100%;
